prevent empty LI from collapse

--- a/app/assets/stylesheets/blocks/b-list.sass
+++ b/app/assets/stylesheets/blocks/b-list.sass
@@ -10,6 +10,9 @@
     line-height: $line_height
     list-style: none
 
+    &:empty:after
+      content: ' '
+
     &:before
       position: absolute
       content: ''
